--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* classes for overriding purposes */
+.react-draggable-transform-none {
+  transform: none !important;
+}
